2006-04-20  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Remove support of --no-get-channel-cipher-suites.

	* ipmipower/: Send Get Channel Cipher command with IPMI 2.0
	headers rather than IPMI 1.5 headers.

	* libfreeipmi/, ipmipower/: Fix cipher suite record parsing.
	
2006-04-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_calculate_payload_type),
	libfreeipmi/src/ipmi-utils.c (ipmi_is_ipmi_1_5_packet,
	ipmi_is_ipmi_2_0_packet): Fix parse bugs.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus.h,
	libfreeipmi/src/ipmi-rmcpplus.c (ipmi_rmcpplus_init): New
	function.

	* libfreeipmi/: Rename ipmi-rmcpplus-crypt.c to ipmi-crypt.c and
	ipmi-rmcpplus-crypt.h to ipmi-crypt.h.

	* libfreeipmi/, ipmipower/: Adjust for modifications.

	* libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c: Fix
	activate payload response bit shit bug.

	* libfreeipmi/src/ipmi-rmcpplus-debug.c: Fix various mem-leak possibilities.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_session_trlr_pad): Fix padding corner case.
	
2006-04-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sol-cmds.c: Fix critical BMC to Remote
	Console SOL parsing bug.
	
2006-04-14  Albert Chu <chu11@llnl.gov>

	* ipmiping/src/ipmiping.c (parsepacket): Fix warning.

	* fish/: Attempt to configure based on SOL Payload Channel.
	
2006-04-13  Albert Chu <chu11@llnl.gov>

	* fish/src/extension.c (install_new_procedures): Fix function name
	typo.

	* libfreeipmi/src/ipmi-utils.c (ipmi_check_completion_code): Fix
	compile bug.

	* freeipmi.spec.in: Fix package requirement gcrypt -> libgcrypt.

	* libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c: Add
	forgotten reserved fields to tmpl_get_channel_payload_support_rs.

	* ipmipower/src/ipmipower_packet.c (ipmipower_packet_dump): Fix
	compiler warning.

	* ipmipower/: Re-architect to include set session privilege
	command in ipmi 2.0 stream.  Cleanup code in general.
