@@ -30,9 +30,9 @@ extern "C" {
 #include <freeipmi/fiid.h>
 
 #define IPMI_MAX_USER_NAME_LENGTH           16
-#define IPMI_MAX_PASSWORD_LENGTH            IPMI_MAX_AUTHENTICATION_CODE_LENGTH 
-#define IPMI_1_5_MAX_PASSWORD_LENGTH        IPMI_MAX_PASSWORD_LENGTH
+#define IPMI_1_5_MAX_PASSWORD_LENGTH        IPMI_MAX_AUTHENTICATION_CODE_LENGTH
 #define IPMI_2_0_MAX_PASSWORD_LENGTH        20
+#define IPMI_MAX_PASSWORD_LENGTH            IPMI_2_0_MAX_PASSWORD_LENGTH
 #define IPMI_CHALLENGE_STRING_LENGTH        16
 #define IPMI_MAX_K_R_LENGTH                 20
 #define IPMI_MAX_K_G_LENGTH                 20
